<resources>
    <string name="app_name">Inventory</string>
    <string name="delete_all">Delete All Items</string>
    <string name="title_activity_editor">EditorActivity</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="add">Add</string>
    <string name="price">Price</string>
    <string name="qunatity">Quantity</string>
    <string name="product_name">Product name</string>
    <string name="select_image">Select Image</string>
    <string name="image">Image</string>
    <string name="supplier_phone">Supplier Phone</string>
    <string name="e_g_02011000000">e.g. +02011000000</string>
    <string name="supplier_email">Supplier Email</string>
    <string name="supplier_gmail_com">supplier@gmail.com</string>
    <string name="there_is_no_items_in_the_store">There is no items in the store</string>
    <string name="insert_dummy_data">Insert dummy data</string>
    <string name="order">Order</string>
    <string name="order_quantity">Order Quantity</string>
</resources>
