<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="8dp"
    android:layout_marginStart="16dp"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="lamaatech.com.inventory.core.DetailsActivity.view.DetailsActivity"
    tools:showIn="@layout/activity_details">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/product_name"
            android:textColor="@color/primaryTextColor"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/productNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"

            android:hint="@string/product_name"
            android:inputType="text" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textColor="@color/primaryTextColor"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/productPriceEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/price"
            android:inputType="number" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qunatity"
            android:textColor="@color/primaryTextColor"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/decreaseQuantityButton"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:background="@color/primaryLightColor"
                android:text="-"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/productQuantityEditText"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/qunatity"
                android:inputType="number"
                android:text="0" />

            <Button
                android:id="@+id/increaseQuantityButton"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:background="@color/primaryLightColor"
                android:text="+"
                android:textSize="24sp" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/supplier_name"
            android:textColor="@color/primaryTextColor"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/productSupplierEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/supplier_name"
            android:inputType="textPersonName" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/supplier_email"
            android:textColor="@color/primaryTextColor"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/supplierEmailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/supplier_gmail_com"
            android:inputType="textEmailAddress" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/image"
            android:textColor="@color/primaryTextColor"
            android:textSize="24sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/selectImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/primaryLightColor"
                android:gravity="center"
                android:text="@string/select_image" />

            <ImageView
                android:id="@+id/productImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_gravity="end"
                android:layout_toEndOf="@+id/selectImageButton"
                android:layout_toRightOf="@+id/selectImageButton"
                android:contentDescription="@string/image"
                android:hint="@string/supplier_name"
                android:inputType="textPersonName"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_announcement" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/addProductButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/primaryLightColor"
                android:text="@string/add" />

            <Button
                android:id="@+id/deleteProductButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/primaryLightColor"
                android:text="@string/delete"
                android:visibility="gone" />


        </LinearLayout>

        <include
            android:id="@+id/newOrderLayout"
            layout="@layout/new_order"
            android:visibility="gone" />
    </LinearLayout>
</ScrollView>
